# EasyLingo

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
database/: schema.sql
scripts/: dev_server.py  fix-shortcut-icon.js
src/: app.js  db-adapter.js  db-tauri.js  file-handler.js  index.html  tauri-api.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
