[package]
name = "easylingo"
version = "1.1.0"
description = "A desktop language learning app powered by AI and SRS"
authors = ["ReoNa0216"]
edition = "2021"
rust-version = "1.75"
build = "build.rs"

[lib]
name = "easylingo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "easylingo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
scraper = "0.22"

[profile.release]
opt-level = 3
lto = true
strip = true
